[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lamp.gd" type="Script" id=1]
[ext_resource path="res://Sprite/EnergieLamp.png" type="Texture" id=2]

[node name="Lamp" type="Node2D"]
script = ExtResource( 1 )

[node name="EnergieLamp" type="Sprite" parent="."]
position = Vector2( 375, 36 )
z_index = 3
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 2
margin_left = -78.0
margin_top = -58.0
margin_right = 758.0
margin_bottom = 507.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.0117647 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 356.0
margin_top = 63.0
margin_right = 396.0
margin_bottom = 103.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 404.0
margin_top = 31.0
margin_right = 479.0
margin_bottom = 68.0

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 403.0
margin_top = 75.0
margin_right = 478.0
margin_bottom = 112.0

[node name="LichtSwitch" type="CheckButton" parent="."]
margin_left = 336.0
margin_top = 67.0
margin_right = 412.0
margin_bottom = 107.0
pressed = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="pressed" from="LichtSwitch" to="." method="_on_LichtSwitch_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_Timer_timeout"]
